src/test/ui/lifetimes/issue-79187-2.base.stderr
error: implementation of `Fn` is not general enough
  --> $DIR/issue-79187-2.rs:12:5
   |
LL |     take_foo(|a| a);
   |     ^^^^^^^^ implementation of `Fn` is not general enough
   |
   = note: closure with signature `fn(&'2 i32) -> &i32` must implement `Fn<(&'1 i32,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `Fn<(&'2 i32,)>`, for some specific lifetime `'2`

error[E0308]: mismatched types
  --> $DIR/issue-79187-2.rs:16:5
   |
LL |     take_foo(|a: &i32| a);
   |     ^^^^^^^^ lifetime mismatch
   |
   = note: expected reference `&i32`
              found reference `&i32`
note: the anonymous lifetime #1 defined here doesn't meet the lifetime requirements
  --> $DIR/issue-79187-2.rs:16:14
   |
LL |     take_foo(|a: &i32| a);
   |              ^^^^^^^^^^^
note: the lifetime requirement is introduced here
  --> $DIR/issue-79187-2.rs:9:21
   |
LL | fn take_foo(_: impl Foo) {}
   |                     ^^^

error[E0308]: mismatched types
  --> $DIR/issue-79187-2.rs:20:5
   |
LL |     take_foo(|a: &i32| -> &i32 { a });
   |     ^^^^^^^^ lifetime mismatch
   |
   = note: expected reference `&i32`
              found reference `&i32`
note: the anonymous lifetime #1 defined here doesn't meet the lifetime requirements
  --> $DIR/issue-79187-2.rs:20:14
   |
LL |     take_foo(|a: &i32| -> &i32 { a });
   |              ^^^^^^^^^^^^^^^^^^^^^^^
note: the lifetime requirement is introduced here
  --> $DIR/issue-79187-2.rs:9:21
   |
LL | fn take_foo(_: impl Foo) {}
   |                     ^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
